--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "be-my-style",
   "private": true,
-  "type": "module",
+  "type": "commonjs",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
     "@rails/actioncable": "^6.0.0",
