--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "commonjs",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
+    "@nathanvda/cocoon": "^1.2.14",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
