--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -22,15 +22,41 @@ jobs:
           ~/.rbenv/shims/bundle install &&
           ~/.rbenv/shims/bundle exec rails assets:precompile RAILS_ENV=production &&
           ~/.rbenv/shims/bundle exec rails db:migrate RAILS_ENV=production &&
+          
+          # Kill any process running on port 3000
           PORT=3000
           PID=$(lsof -ti tcp:$PORT)
           if [ -n "$PID" ]; then
             echo "Killing process on port $PORT (PID: $PID)"
             kill -9 $PID
+          else
+            echo "No process running on port $PORT"
           fi
+          
+          # Remove the server.pid if it exists
           rm -f tmp/pids/server.pid
-          ~/.rbenv/shims/rails s -e production
+          
+          # Start the Rails server in the background
+          nohup ~/.rbenv/shims/rails s -e production -b '0.0.0.0' -p 3000 & 
         EOF
+
+# 修正前コード
+# name: Rails CI/CD
+
+# on:
+#   push:
+#     branches: [main]
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/setup-node@v3
+#     - name: Deploy 
+#       env:
+#         PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+#         USER_NAME: ${{ secrets.USER_NAME }}
+#         HOST_NAME: ${{ secrets.HOST_NAME }}
       # run: |
       #   echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
       #   ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} 'cd be-my-style &&
